# oxideav-pipeline

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dag.rs  executor.rs  filter_registry.rs  lib.rs  schema.rs  selection.rs  sinks.rs  staged.rs  validate.rs
tests/: decoder_error_tolerance.rs  pipelined_abort.rs  seek_barrier.rs  source_variants.rs  spectrogram_adds_video_stream.rs  transcode_simple_multi_stream.rs
tests/common/: mod.rs  stub.rs
