[package]
name = "oxideav-pipeline"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-pipeline"
authors = ["Mark Karpeles"]
description = "Pipeline composition for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-pipeline"
keywords = ["multimedia", "pipeline", "transcoding", "streaming", "pure-rust"]
categories = ["multimedia"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.0"
