[package]
name = "oxideav-pipeline"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-pipeline"
authors = ["Mark Karpeles"]
description = "Pipeline composition for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-pipeline"
keywords = ["multimedia", "pipeline", "transcoding", "streaming", "pure-rust"]
categories = ["multimedia"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-source = "0.0"
oxideav-pixfmt = "0.1"
oxideav-audio-filter = { version = "0.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[features]
default = ["audio_filter"]
audio_filter = ["dep:oxideav-audio-filter"]

[dev-dependencies]
oxideav-basic = "0.0"
