[package]
name = "oxideav-pipeline"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-pipeline"
authors = ["Mark Karpeles"]
description = "Pipeline composition for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-pipeline"
keywords = ["multimedia", "pipeline", "transcoding", "streaming", "pure-rust"]
categories = ["multimedia"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-source = "0.1"
oxideav-pixfmt = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

[features]
default = []

# oxideav-pipeline is a framework crate; integration tests that need
# real codecs/containers (WAV roundtrip, pix-convert with h264, serial-vs-
# pipelined byte parity) live in oxideav-tests. The tests/ here use only
# the in-tree stub demuxer + decoder (`tests/common/stub.rs`) so this
# crate has zero codec/container dev-deps.
[dev-dependencies]
oxideav-audio-filter = "0.0"
